✨ Add Feature * Add initial implementation of `/drivers` CRU(D) operations * Add initial support for and usage of h2 in test * Change `/drivers` PUT to accept only one driver as update object for now, as (de-)activating will be implemented in separate path
